test/fail/if-nonbool.rnp
if 1 {}
---
TypeError: Expected boolean but got number
 --> fail/if-nonbool.rnp:1:4
  |
1 | if 1 {}
  |    ^ Expected boolean but got number
  |
